@@ -55,7 +55,7 @@
 <html <?php echo HTML_PARAMS; ?>>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=<?php echo CHARSET; ?>">
-    <title>ZenMagick Admin :: <?php $request->getToolbox()->metaTags->getTitle() ?></title>
+    <title>ZenMagick Admin :: <?php echo $request->getToolbox()->metaTags->getTitle() ?></title>
     <link rel="stylesheet" type="text/css" href="includes/stylesheet.css">
     <link rel="stylesheet" type="text/css" href="content/zenmagick.css">
     <link rel="stylesheet" type="text/css" href="content/jquery/jquery.treeview.css">
